--- a/src/sphinx_book_theme/assets/styles/index.scss
+++ b/src/sphinx_book_theme/assets/styles/index.scss
@@ -17,7 +17,6 @@
 @import "base/print";
 
 // Major theme layout, skeleton, and whitespace
-@import "sections/announcement";
 @import "sections/article";
 @import "sections/footer-article";
 @import "sections/footer-content";
@@ -32,6 +31,7 @@
 @import "components/search.scss";
 
 // Content blocks in standard Sphinx
+@import "content/admonitions";
 @import "content/code";
 @import "content/field-lists";
 @import "content/footnotes";
