--- a/src/sphinx_book_theme/assets/styles/components/_search.scss
+++ b/src/sphinx_book_theme/assets/styles/components/_search.scss
@@ -5,14 +5,5 @@
 // Highlighted search items are a slightly lighter version of Jupyter orange
 dt:target,
 span.highlighted {
-  background-color: var(--sbt-color-search-highlighted);
-}
-
-.bd-search {
-  .icon {
-    color: var(--sbt-color-search-icon);
-  }
-  .search-button__kbd-shortcut {
-    display: none;
-  }
+  background-color: #f3772642;
 }
