--- a/src/sphinx_book_theme/assets/styles/sections/_header-article.scss
+++ b/src/sphinx_book_theme/assets/styles/sections/_header-article.scss
@@ -2,14 +2,11 @@
 * Top Bar *
 * TODO: Rename much of these to article-header to conform with sphinx-basic-ng
 *********************************************/
-.bd-header-article {
+.header-article {
   height: $header-article-height; // Fix the height so the TOC doesn't grow it
   background-color: white;
   transition: left 0.2s;
   font-size: var(--sbt-header-article-font-size);
-  position: sticky;
-  top: 0;
-  z-index: 1018;
 
   @include header-height-mobile;
 
