--- a/src/sphinx_book_theme/assets/styles/sections/_sidebar-primary.scss
+++ b/src/sphinx_book_theme/assets/styles/sections/_sidebar-primary.scss
@@ -1,14 +1,11 @@
 /*********************************************
 * Left Nav Bar *
 *********************************************/
-.bd-sidebar-primary {
+#site-navigation {
   padding-top: 0;
-  padding: 0em;
-  flex-basis: $leftbar-width-wide;
+  width: $leftbar-width-wide;
   font-size: var(--sbt-sidebar-font-size);
   top: 0px !important;
-  max-height: 100vh;
-  max-width: 100%;
   background: white;
   border-right: $border-thin;
   transition: margin-left $animation-time ease 0s,
@@ -36,13 +33,13 @@
   }
 
   // Apply some basic padding so the dropdown buttons don't overlap w/ scrollbar
-  .sidebar-start-items,
-  .sidebar-end-items {
-    padding: 1rem 1rem 1rem 1.5rem;
+  .bd-sidebar__top,
+  .bd-sidebar__bottom {
+    padding: 0 1rem 0rem 1.5rem;
   }
 
   // This should always snap to the bottom even if there's no sidebar content
-  .sidebar-end-items {
+  .bd-sidebar__bottom {
     margin-top: auto;
     margin-bottom: 2em;
   }
@@ -52,12 +49,11 @@
     li a,
     ul li a {
       color: $non-content-grey;
-      padding-right: 1.5rem;
     }
     a:hover,
     li.active > a,
     li.active > a:hover {
-      color: var(--pst-color-link);
+      color: rgba(var(--pst-color-link), 1);
     }
 
     // Adjust padding to be a bit tighter
